# python-playground

./: .gitignore  README.md
llm_coding_tests/thingy/: aquarium.py  fish.py  fish_species.py
mcp_servers/note_service/: README.md  pyproject.toml
mcp_servers/note_service/src/note_service/: server.py
mcp_servers/weather_service/: README.md  pyproject.toml
ml_experiment/: README.md  pyproject.toml
ml_experiment/foxy/: export_claud.js
ml_experiment/langchain/: claud_iterate.py
uses_llm/: pyproject.toml
