[project]
name = "note-service"
version = "0.1.0"
description = "A MCP server project"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
 "httpx>=0.28.1",
 "mcp>=1.1.0",
 "python-dotenv>=1.0.1",
]
[[project.authors]]
name = "James Gregory"
email = "james.jrg@gmail.com"

[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[project.scripts]
note-service = "note_service:main"
